--- a/main.html
+++ b/main.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
+
+	<div id="otp_card">
+		<h3>Verify Your Account</h3>
+		<p>We emailed you the six digit code to acciojob@gamil.com Enter the code  below to confirm your email address</p>
+		<div class="otp-card-inputs">
+			<input type="text" maxlength="1" autofocus>
+			<input type="text" maxlength="1">
+			<input type="text" maxlength="1">
+			<input type="text" maxlength="1">
+			<input type="text" maxlength="1">
+			<input type="text" maxlength="1">
+		</div>
+		<div class="end-para"> <p>This is design only. We didn't actucally send you an email as we don't have your email.right? </p></div>
+		
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
