--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
 
 <body>
 
-	<div id="otp_card">
+	<div id="verification_heading">
 		<h3>Verify Your Account</h3>
 		<p>We emailed you the six digit code to acciojob@gamil.com Enter the code  below to confirm your email address</p>
-		<div class="otp-card-inputs">
-			<input type="text" maxlength="1" autofocus>
-			<input type="text" maxlength="1">
-			<input type="text" maxlength="1">
-			<input type="text" maxlength="1">
-			<input type="text" maxlength="1">
-			<input type="text" maxlength="1">
+		<div id="code-container">
+			<input class="code" type="text" maxlength="1" autofocus>
+			<input  class="code" type="text" maxlength="1">
+			<input  class="code" type="text" maxlength="1">
+			<input  class="code" type="text" maxlength="1">
+			<input  class="code" type="text" maxlength="1">
+			<input  class="code" type="text" maxlength="1">
 		</div>
 		<div class="end-para"> <p>This is design only. We didn't actucally send you an email as we don't have your email.right? </p></div>
 		
