--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 
-	<div id="verification_heading">
-		<h3>Verify Your Account</h3>
-		<p>We emailed you the six digit code to acciojob@gamil.com Enter the code  below to confirm your email address</p>
+	<div id="otp-card">
+		<h3 id="verification_heading">Verify Your Account</h3>
+		<p id="verification_subtext">We emailed you the six digit code to acciojob@gamil.com Enter the code  below to confirm your email address"</p>
 		<div id="code-container">
 			<input class="code" type="text" maxlength="1" autofocus>
 			<input  class="code" type="text" maxlength="1">
